////////////////////
/    Change Log    /
////////////////////


Members
---------
John Janzen                     Acknowledged
Austin Lott			Acknowledged
Cameron Stenmark                Acknowledged


2/4/2016    Syncing - Austin
2/4/2016    Syncing - John
2/4/2016    Updating - Cameron
2/12/2016   Created controller templates - Cameron
2/12/2016   Created view files - Austin
2/12/2016   Added database SQL file - John
2/12/2016   Added base template and controller - Cameron
2/12/2016   Added new file paths for assets/bootstrap - Cameron
2/12/2016   Added code for dashboard view - Austin
2/12/2016   Added code for stock view - Austin