@@ -20,3 +20,4 @@ Cameron Stenmark                Acknowledged
 2/12/2016   Added new file paths for assets/bootstrap - Cameron
 2/12/2016   Added code for dashboard view - Austin
 2/12/2016   Added code for stock view - Austin
+2/14/2016   Linked dashboard view to Base_Controller
